@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-14T01:10:58Z",
+  "timestamp" : "2022-05-14T08:14:39Z",
   "count_outdated" : 264,
   "uniques_outdated" : 130,
-  "count" : 300,
-  "uniques" : 155,
+  "count" : 301,
+  "uniques" : 156,
   "clones" : [
     {
       "timestamp": "2022-05-01T00:00:00Z",
@@ -79,6 +79,13 @@
       "timestamp": "2022-05-13T00:00:00Z",
       "count": 2,
       "count_minmax": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
